--- a/UI/generacion.ui
+++ b/UI/generacion.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>735</width>
-    <height>360</height>
+    <width>1095</width>
+    <height>630</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>351</width>
-     <height>341</height>
+     <width>531</width>
+     <height>611</height>
     </rect>
    </property>
    <property name="title">
@@ -30,17 +30,28 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>331</width>
+      <width>521</width>
       <height>61</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="path_Label">
-       <property name="text">
-        <string>Path:</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLabel" name="path_Label">
+         <property name="text">
+          <string>Path:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="GamaBrillo_label">
+         <property name="text">
+          <string>Gama y brillo:</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -58,6 +69,36 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QCheckBox" name="medianCheckbox">
+         <property name="text">
+          <string>Resize</string>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="MedianCheckbox">
+         <property name="text">
+          <string>Median</string>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="GaussCheckbox">
+         <property name="text">
+          <string>Gauss</string>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
@@ -67,8 +108,8 @@
      <rect>
       <x>14</x>
       <y>95</y>
-      <width>321</width>
-      <height>231</height>
+      <width>501</width>
+      <height>501</height>
      </rect>
     </property>
     <property name="text">
@@ -82,10 +123,10 @@
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>550</x>
      <y>10</y>
-     <width>351</width>
-     <height>341</height>
+     <width>531</width>
+     <height>611</height>
     </rect>
    </property>
    <property name="title">
@@ -95,9 +136,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
-      <width>331</width>
-      <height>23</height>
+      <y>30</y>
+      <width>511</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="value">
@@ -109,8 +150,8 @@
      <rect>
       <x>10</x>
       <y>100</y>
-      <width>331</width>
-      <height>231</height>
+      <width>471</width>
+      <height>501</height>
      </rect>
     </property>
     <property name="text">
