--- a/UI/Del Píxel al Pincel - Propiedades.ui
+++ b/UI/Del Píxel al Pincel - Propiedades.ui
@@ -102,6 +102,9 @@ Imagen</string>
          <height>24</height>
         </rect>
        </property>
+       <property name="maximum">
+        <number>50</number>
+       </property>
       </widget>
      </widget>
     </item>
@@ -118,6 +121,9 @@ Imagen</string>
          <width>101</width>
          <height>24</height>
         </rect>
+       </property>
+       <property name="maximum">
+        <number>250</number>
        </property>
       </widget>
      </widget>
